Update dependencies including Milo, move to Java 11